<resources>
    <string name="app_name">KosApp</string>
    <string name="login">Sign In</string>
    <string name="username_anda">Username Anda</string>
    <string name="e_mail_anda">E-mail Anda</string>
    <string name="password_anda">Password Anda</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="home">Home</string>
    <string name="kos_saya">Kos Saya</string>
    <string name="pengaturan">Pengaturan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jenis_kos">Jenis Kos</string>
    <string name="search_kos">Cari Kosmu Disini</string>
    <string name="sign_up">Sign Up</string>
    <string name="my_kos_text">My Kos Text</string>
    <string name="tambah_kos">Tambah Kos</string>
    <string name="edit_kos">Edit Kos</string>
    <string name="alamat_kos">Alamat Kos</string>
    <string name="harga_kos_harian">Harga Kos Harian</string>
    <string name="harga_kos_bulanan">Harga Kos Bulanan</string>
    <string name="harga_kos_tahunan">Harga Kos Tahunan</string>

    <string name="petunjuk_buka_kos">
        1. Untuk Menyewa Kos Pelanggan Wajib Untuk Daftar Terlebih Dahulu.

        2. Untuk Melakukan Pembukaan Kos Untuk Disewa, Pemilik Kos Harus Mengunggah Bukti Pembayaran Terlebih Dahulu

        3. setiap pendaftaran kos harus membayar sejumlah 100 ribu setiap pendaftaran kos
    </string>

    <!-- TODO: Key -->
    <string name="access_token">pk.eyJ1IjoiZ29mYXJwdXRyYSIsImEiOiJja3k1M2Rsb3kwaHlyMnJwcXFuMmYweHE4In0.XCsO5PZDWc_ZPg4vXHTbXQ</string>
    <string name="pilih_lokasi">Pilih Lokasi</string>

    <!-- Instruksi ambil lokasi-->
    <string name="txt_pengambilan_lokasi">
        Untuk Memilih Lokasi Kosan anda di peta, silahkan sentuh peta di map yang mau anda
        tandai sebagai lokasi kosan anda. Jika sudah selanjutnya tekan tombol pilih lokasi.
        Titik berwarna biru/abu-abu merupakan lokasi pengguna saat ini
    </string>

    <string name="txt_batalkan">Batalkan</string>

    <string name="txt_detail_kos_dummy">Kos nyaman yang terleta di jl.kaki. \n
        Kos ini memiliki peraturan sebagai berikut: \n
        1. Jam malam sampai jam 10. \n
        2. Tidak Boleh membawa lawan jenis\n
        3. Jangan lupa bayar uang kos \n
        4. Jangan Lupa Kunci Pintu Kalau Malam\n
        5. Jangan Jorok
    </string>

    <string name="txt_jumlah_kamar_kos">Jumlah Kamar Kos</string>

    <string name="txt_request_receiver_dummy">Anu Meminta Untuk Masuk Ke kOs Sini… Aoakah Anda MAu Terima?</string>
    <string name="text_konfirmasi_sewa">Terima Kasih, Sekarang Tunggu Pemilik Kos Untuk Mengonfirmasi Permintaan Sewa Anda</string>
    <string name="text_comment">Komentar Anda</string>
    <string name="hint_ganti_username">Masukkan Username Baru Anda</string>
    <string name="hint_ganti_password">Masukkan Password Baru Anda</string>
    <string name="text_permintaan_judul">Judul</string>
    <string name="text_permintaan_terima">Terima</string>
    <string name="text_permintaan_tola">Tolak</string>
    <string name="text_permintaan_tanggal">03-03-2003 09:30:25</string>
    <string name="text_button_konfirmasi_password">Konfirmasi Password</string>
    <string name="text_btn_selengkapnya">Selengkapnya</string>
    <string name="text_btn_petunjuk">Petunjuk</string>
    <string name="text_route_jalan">Tunjukkan Route Jalan</string>
    <string name="text_detail_penyewa">Detail Penyewa</string>
    <string name="text_history_tanggal_sewa">Tanggal Sewa</string>
    <string name="text_dummy_date">12-12-2012</string>
    <string name="text_nama_kos">Nama Kos</string>
    <string name="text_alamat">Jl.Hang Lekir</string>
    <string name="text_history_sewa_kos">History Sewa Kos</string>
    <string name="text_my_kos">My Kos</string>
    <string name="text_nama_pengguna">Nama Pengguna</string>
    <string name="text_dummy_user_welcome">Hallo, {Nama Pengguna}</string>
    <string name="text_dummy_verifikasi">Verifikasi</string>
    <string name="text_verifikasi_akun">Verifikasi Akun</string>
    <string name="txt_status">Status...</string>
    <string name="txt_isi_permintaan">Isi Permintaan</string>
    <string name="txt_detail_akun">Detail Akun</string>
    <string name="txt_nama_pengguna">Nama Pengguna:</string>
    <string name="txt_email_pengguna">Email Pengguna:</string>
    <string name="txt_jenis_kelamin">Jenis Kelamin:</string>
    <string name="txt_no_telpon">No Telpon:</string>
    <string name="txt_blank">...</string>
    <string name="txt_id_pengguna">Id Pengguna</string>
    <string name="txt_id_verifikasi">Id Verifikasi:</string>
    <string name="txt_email">Email Pengguna:</string>
    <string name="txt_foto_verifikasi">Foto Verifikasi:</string>
    <string name="txt_status_akun">Status Akun:</string>
    <string name="txt_nama_kos">Nama Kos</string>
    <string name="txt_alamat_os">Alamat Kos</string>
    <string name="txt_harga_kos">Harga Kos</string>
    <string name="txt_jenis_kos">Jenis Kos</string>
    <string name="txt_email_pemilik_kos">Email Pemilik Kos:</string>
    <string name="txt_deskripsi_kos">Deskripsi Kos</string>
    <string name="txt_fasilitas_kos">Fasilitas Kos:</string>
    <string name="txt_thumbnail_kos">Thumbnail Kos</string>
    <string name="txt_gambar_kos">Gambar Kos</string>
    <string name="txt_detail_kos">Detail Kos</string>
    <string name="txt_jenis_pembayaran">Jenis Pembayaran:</string>
    <string name="txt_nik_anda">Nik Anda</string>
    <string name="txt_kelurahan_anda">Kelurahan Anda</string>
    <string name="txt_kecamatan_anda">Kecamatan Anda</string>
    <string name="txt_kelurahan_kos">Kelurahan Kos</string>
    <string name="txt_kecamatan_kos">Kecamatan Kos</string>
    <string name="text_lihat_bukti_pembayaran">Lihat Bukti Pembayaran</string>
    <string name="txt_tambah_rating">Tambah Rating</string>
    <string name="txt_koss_null">Pengguna Ini Belum Pernah Menyewa Kos</string>
    <string name="txt_sewa_kos">Sewa Kos</string>
    <string name="txt_totl_harga">Total Harga:</string>
    <string name="txt_judul_bukti_pembayaran">Bukti Pembayaran Pengguna</string>


</resources>