<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_detail_akun"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="15sp"
            />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:text="@string/txt_nama_pengguna"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lbldetailnama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginTop="10sp"
            android:gravity="end"
            android:text="@string/txt_blank"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:text="@string/txt_email_pengguna"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblldetailemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginTop="10sp"
            android:gravity="end"
            android:text="@string/txt_blank"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:text="@string/txt_jenis_kelamin"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lbldetailjeniskelamin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginTop="10sp"
            android:gravity="end"
            android:text="@string/txt_blank"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="vertical"
        android:layout_marginBottom="20sp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:text="@string/txt_no_telpon"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lbldetailnotelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:gravity="end"
            android:layout_marginTop="10sp"
            android:text="@string/txt_blank"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>



</LinearLayout>