<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/ivkos"
                android:layout_width="150dp"
                android:layout_height="210dp"
                android:scaleType="fitXY"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="30sp"

            >

            <TextView
                android:id="@+id/lblnama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nama_kos"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                />


            <TextView
                android:id="@+id/lblalamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/text_alamat"
                android:textColor="@color/black"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_history_tanggal_sewa"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:id="@+id/lbltanggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_dummy_date"
                    android:textColor="@color/black"
                    android:layout_marginStart="7sp"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>